[package]
name = "rust2040"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.0", features = ["critical-section-impl"] }
rtt-target = "0.5.0"
